feat: Modified Home Page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@ input, textarea {
   background: var(--vegas-gold);
   color: var(--smoky-black);
 }
+.vegas-gold {color: var(--vegas-gold);}
 
 :focus { outline-color: var(--vegas-gold); }
 
@@ -368,6 +369,7 @@ main {
   transition: var(--transition-1);
   z-index: 1;
 }
+.desktop-email{display: block}
 
 .info_more-btn::before {
   content: "";
@@ -602,8 +604,8 @@ main {
   font-weight: var(--fw-300);
   line-height: 1.6;
   display: -webkit-box;
-  line-clamp: 4;
-  -webkit-line-clamp: 4;
+  line-clamp: 10;
+  -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -1351,6 +1353,8 @@ textarea.form-input::-webkit-resizer { display: none; }
     right: -30px;
     padding: 10px 15px;
   }
+  .desktop-email { display: none; }
+
 
   .info_more-btn span {
     display: block;
@@ -1436,8 +1440,8 @@ textarea.form-input::-webkit-resizer { display: none; }
   }
 
   .testimonials-text {
-    line-clamp: 2;
-    -webkit-line-clamp: 2;
+    line-clamp: 10;
+    -webkit-line-clamp: 10;
   }
 
   /* testimonials modal */
@@ -1845,6 +1849,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   .info-content .title { margin: auto; }
 
   .info_more-btn { display: none; }
+  .mobile-email { display: none; }
 
   .sidebar-info_more {
     opacity: 1;
