--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -826,7 +826,7 @@ main {
   box-shadow: 0 0 0 4px var(--jet);
 }
 
-.timeline-text {
+.timeline-text, .timeline-text ul, .timeline-text ul li {
   color: var(--light-gray);
   font-weight: var(--fw-300);
   line-height: 1.6;
@@ -1883,5 +1883,10 @@ textarea.form-input::-webkit-resizer { display: none; }
 	 */
 
   .timeline-text { max-width: 700px; }
+  .timeline-item ul li {
+    color: var(--light-gray);
+    font-weight: var(--fw-300);
+    line-height: 1.6;
+  }
 
 }
