feat: Changed favicon and some content && added Download my resume button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,9 @@ main {
   transition: var(--transition-1);
   z-index: 1;
 }
-.desktop-email{display: block}
+.p-button {
+    background: var(--vegas-gold);
+}
 
 .info_more-btn::before {
   content: "";
